src/test/deca/codegen/invalid/renduInter02/01modulo_by_zero.deca
// Description:
//      Opération binaire % incorrecte : valeurs inappropriées utilisées pour le calcul
//      => L'opérateur % ne peut pas donner le reste d'une division par 0
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 10 : reste d'une division par zero

{
    int x = y % 0;
    println("x=", x);
}